better fix for `pre` whitespace stuff

--- a/extension/css/hnes.css
+++ b/extension/css/hnes.css
@@ -106,7 +106,7 @@ body center table .default font {
 }
 
 body center table .default pre {
-  max-width: 100%;
+  white-space: pre-line;
 }
 
 body center table .default i {
